<resources>
    <string name="app_name">News</string>

    <string name="recent_news">Recent</string>
    <string name="headlines_news">Headlines</string>
    <string name="saved_news">Saved</string>
    <string name="settings_app">Settings</string>
    <string name="profile_user">Profile</string>
    <string name="search_news">Search</string>
    <string name="empty_label" />
    <string name="saved_news_label">Saved Articles</string>
    <string name="share_article">Share Article</string>
    <string name="save_article">Article saved</string>
    <string name="go_to_original_web_page">View original web page</string>
    <string name="send_feedback">Send feedback</string>
    <string name="search_hint">Search</string>
    <string name="delete_article">Article removed</string>
    <string name="undo">Undo</string>
    <string name="there_is_no_news">There is no news!</string>
    <string name="result_for_search">RESULT FOR \"%1$s\": %2$d</string>
    <string name="message_no_result_found">No result found.</string>
    <string name="message_modify_search">Please modify your search</string>
    <string name="network_error">No Connection</string>
    <string name="try_again">Try Again</string>
    <string name="contact_us">Contact us</string>

    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="environment">Environment</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>

    <string name="region_interested">Regions of interest</string>
    <string name="general">General</string>

    <string name="dark_mode">Dark Theme</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="system_default">System Default</string>

    <string name="description_saved_article_page">Saved articles are stored here. Tap the icon on any article to add it to your collection.</string>

    <string name="country_entries_usa">The United States</string>
    <string name="country_entries_uk">The United Kingdom</string>
    <string name="country_entries_ukraine">Ukraine</string>
    <string name="country_entries_france">France</string>
    <string name="country_entries_germany">Germany</string>
    <string name="country_entries_poland">Poland</string>
</resources>