<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/shareArticleNews"
        android:enabled="true"
        android:icon="@drawable/ic_share_24"
        android:iconTint="?attr/iconTint"
        android:title="@string/share_article"
        app:showAsAction="always" />
    <item
        android:id="@+id/saveArticle"
        android:enabled="true"
        android:icon="@drawable/ic_bookmark_border_24"
        android:iconTint="?attr/iconTint"
        android:title="@string/save_article"
        app:showAsAction="always" />
    <item
        android:id="@+id/go_to_original_web_page"
        android:enabled="true"
        android:icon="@drawable/ic_web_24"
        android:iconTint="?attr/iconTint"
        android:title="@string/go_to_original_web_page"
        app:showAsAction="always" />

    <item
        android:id="@+id/send_feedback"
        android:enabled="true"
        android:icon="@drawable/ic_feedback_24"
        android:iconTint="?attr/iconTint"
        android:title="@string/send_feedback"
        app:showAsAction="always" />
</menu>