<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/recentNewsFragment"
        android:icon="@drawable/ic_recents_news_24"
        android:enabled="true"
        android:title="@string/recent_news" />
    <item
        android:id="@+id/headlinesNewsFragment"
        android:icon="@drawable/ic_public_24"
        android:enabled="true"
        android:title="@string/headlines_news" />
    <item
        android:id="@+id/favoriteNewsFragment"
        android:icon="@drawable/ic_favorite_24"
        android:enabled="true"
        android:title="@string/favorite_news" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_24"
        android:enabled="true"
        android:title="@string/settings_app" />
</menu>