<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_nav_graph"
    app:startDestination="@id/recentNewsFragment">
    <fragment
        android:id="@+id/recentNewsFragment"
        android:name="com.example.newsapp.view.fragment.RecentNewsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_recents_news">
        <action
            android:id="@+id/action_recentNewsFragment_to_articleNewsFragment"
            app:destination="@id/articleNewsFragment"
            app:popUpTo="@id/recentNewsFragment" />
    </fragment>

    <fragment
        android:id="@+id/headlinesNewsFragment"
        android:name="com.example.newsapp.view.fragment.HeadlinesNewsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_breaking_news" />

    <fragment
        android:id="@+id/articleNewsFragment"
        android:name="com.example.newsapp.view.fragment.ArticleNewsFragment"
        android:label="@string/empty_label"
        tools:layout="@layout/fragment_article_news">
        <argument
            android:name="articleNewsLink"
            app:argType="string" />
        <action
            android:id="@+id/action_articleNewsFragment_to_recentNewsFragment3"
            app:destination="@id/recentNewsFragment"
            app:popUpTo="@id/recentNewsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.newsapp.view.fragment.SettingsFragment"
        android:label="Profile" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.newsapp.view.fragment.SearchFragment"
        android:label="@string/empty_label"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/savedNewsFragment"
        android:name="com.example.newsapp.view.fragment.SavedNewsFragment"
        android:label="@string/saved_news_label"
        tools:layout="@layout/fragment_saved_news" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.newsapp.view.fragment.ProfileFragment"
        android:label="@string/profile_user"
        tools:layout="@layout/fragment_profile" />
    <action android:id="@+id/action_global_searchFragment" app:destination="@id/searchFragment" />
</navigation>